--- a/perl6/doc/doc/Type/Array.pod
+++ b/perl6/doc/doc/Type/Array.pod
@@ -185,5 +185,24 @@ Example:
     my @foo = <a b c d e f g>;
     say @foo.splice(2, 3, <M N O P>);       # c d e
     say @foo;                               # a b M N O P f g
+    
+=head2 method shape
+
+Defined as:
+
+    method shape() { (*,) }
+
+Usage:
+
+    ARRAY.shape
+
+Returns the shape of the array as a list.
+
+Example:
+
+    my @foo[2;3] = ( < 1 2 3 >, < 4 5 6 > ); # Array with fixed dimensions
+    say @foo.shape; # (2 3)
+    my @bar = ( < 1 2 3 >, < 4 5 6 > ); # Normal array (of arrays)
+    say @bar.shape; # (*)
 
 =end pod
