--- a/perl6/doc/doc/Language/exceptions.pod
+++ b/perl6/doc/doc/Language/exceptions.pod
@@ -96,10 +96,17 @@ rethrown.
 Output:
 
     I'm alive!
-    No, I expect you die DIE Mr. Bond!
+    No, I expect you to DIE Mr. Bond!
     I'm immortal.
     Just stop already!
       in block <unit> at exception.p6 line 21
+
+A C<try>-block is a normal block and as such treats it's last statement as the
+return value of itself. We can therefor use it as a RHS.
+
+    say try { +"99999" } // "oh no"
+    say try { +"hello" } // "oh no"
+    # OUTPUT«99999␤oh no␤»
 
 =head1 Throwing exceptions
 
