--- a/perl6/doc/doc/Language/functions.pod
+++ b/perl6/doc/doc/Language/functions.pod
@@ -105,6 +105,14 @@ L<documentation on the C<Signature> class|Signature>.
 
 =head2 Arguments
 
+Arguments are supplied as a comma separated list. To disambugiate nested calls
+parentheses or adverbial form can be used.
+
+    sub f(&c){ c() * 2 }; # call the function reference c with empty parameter list
+    sub g($p){ $p - 2 };
+    say(g(42)); # nest call to g in call to say
+    f: { say g(666) }; # call f with a block
+
 When calling a function, positional arguments should be supplied
 in the same order as the function's signature.  Named arguments
 may be supplied in any order, but it is considered good form to
