--- a/perl6/doc/doc/Language/list.pod
+++ b/perl6/doc/doc/Language/list.pod
@@ -16,8 +16,8 @@ Literal L<C<List>s|/type/List> are created with commas B<not> with
 parentheses, so:
 
     1,2         # This is two-element list
-    (1,2)       # This is also a list, in parenthesis
-    (1)         # This is not a list, just a 1 in parenthesis
+    (1,2)       # This is also a list, in parentheses
+    (1)         # This is not a list, just a 1 in parentheses
     (1,)        # This is a one-element list
 
 Parentheses can be used to mark the beginning and end of a list, so:
@@ -34,7 +34,7 @@ first element of a list is at index number zero:
 
 =head1 The @ sigil
 
-Variables in perl6 whose names bear the C<@> sigil are expected to
+Variables in Perl 6 whose names bear the C<@> sigil are expected to
 contain some sort of list-like object.  Of course, other variables may
 also contain these objects, but C<@>-sigiled variables always do, and
 are expected to act the part.
@@ -51,12 +51,32 @@ value must support the L<Positional|/type/Positional> role which guarantees this
 
     my @a := 1; # Type check failed in binding; expected Positional but got Int
 
+=head1 Reset a List Container
+
+To remove all elements from a Positional container assign
+L<C<Empty>|/type/Slip#Empty>, the empty list C<()> or a C<Slip> of the empty
+list to the container.
+
+    my @a = 1,2,3;
+    @a = ();
+    @a = Empty;
+    @a = |();
+
 =head1 Iteration
 
 All lists may be iterated, which means taking each element from the
 list in order and stopping after the last element:
 
     for 1,2,3 { .say } # says 1, then says 2, then says 3
+
+=head1 Testing for Elements
+
+To test for elements convert the C<List> or C<Array> to a L<C<Set>|/type/Set>
+or use a Set L<operator|/language/setbagmix>.
+
+    my @a = <foo bar buzz>;
+    say @a.Set<bar buzz>; # OUTPUT«(True True)␤»
+    say so 'bar' ∈ @a;    # OUTPUT«True␤»
 
 =head2 Sequences
 
@@ -82,10 +102,18 @@ may B<not> be bound to a C<Seq>.
 This is because the C<Seq> does not keep values around after you have used them.
 This is useful behavior if you have a very long sequence, as you may want to
 throw values away after using them, so that your program does not fill up memory.
+For example, when processing a file of a million lines:
+
+    for 'filename'.IO.lines -> $line {
+        do-something-with($line);
+    }
+
+You can be confident that the entire content of the file will not stay around
+in memory, unless you are explicitly storing the lines somewhere.
 
 On the other hand, you may want to keep old values around in some cases.
 It is possible to hide a C<Seq> inside a C<List>, which will still be lazy,
-but will remember old values -- this is done by calling the C<.list> method.
+but will remember old values. This is done by calling the C<.list> method.
 Since this C<List> fully supports C<Positional>, you may bind it directly
 to an C<@>-sigiled variable.
 
@@ -103,7 +131,7 @@ for details.
 =head2 Slips
 
 Sometimes you want to insert the elements of a list into another list.
-This can be done with a special type of sequence called a C<Slip>.
+This can be done with a special type of list called a C<Slip>.
 
     say (1,(2,3),4) eqv (1,2,3,4);         # says False
     say (1,Slip.new(2,3),4) eqv (1,2,3,4); # says True
@@ -158,7 +186,7 @@ to put an infinite list, lest your program hang and, eventually, run out of memo
 
 When you have a list that contains sub-lists, but you only want one flat list,
 you may flatten the list to produce a sequence of values as if all parentheses
-were removed. This works no matter how many levels deep the parenthesis are nested.
+were removed. This works no matter how many levels deep the parentheses are nested.
 
     say (1,(2,(3,4)),5).flat eqv (1,2,3,4,5) # says True
 
@@ -184,7 +212,7 @@ syntax rules are at play: the list is immediately converted into a
 C<Capture>.  A C<Capture> itself has a List (C<.list>) and a Hash (C<.hash>).
 Any C<Pair> literals whose keys are not quoted, or which are not parenthesized,
 never make it into C<.list>.  Instead, they are considered to be named
-arguments and squashed into C<.hash>.  See the L<page on C<Capture>|/types/Capture>
+arguments and squashed into C<.hash>.  See the L<page on C<Capture>|/type/Capture>
 for the details of this processing.
 
 Consider the following ways to make a new C<Array> from a C<List>.  These ways
@@ -236,6 +264,20 @@ is kept intact, causing a nested slice operation that replicates the
 structure in the result:
 
     say ("a","b","c")[(1,2),(0,1)] eqv (("b", "c"), ("a", "b")) # says True
+
+=head2 Range as Slice
+
+A L<C<Range>|/type/Range> is a container for a lower and a upper boundary.
+Generating a slice with a C<Range> will include any index between those bounds,
+including the bounds. For infinite upper bounderies we agree with
+mathematicians that C<Inf> equals C<Inf-1>.
+
+    my @a = 1..5;
+    say @a[0..2]; # OUTPUT«(1 2 3)␤»
+    say @a[0..^2]; # OUTPUT«(1 2)␤»
+    say @a[0..*];  # OUTPUT«(1 2 3 4 5)␤␤»
+    say @a[0..^*]; # OUTPUT«(1 2 3 4 5)␤» 
+    say @a[0..Inf-1]; # OUTPUT«(1 2 3 4 5)␤»
 
 =head2 Array Constructor Context
 
@@ -290,6 +332,30 @@ not bind an Array that has the wrong type to a typed C<@>-sigiled variable:
     my Int @b := Array[Int].new(1,2,3); # fine
     @b := Array.new(1,2,3);             # error: Type check failed in binding
 
+When working with typed arrays, it is important to remember that they are
+nominally typed. This means the declared type of an array is what matters.
+Given the following sub declaration:
+
+    sub mean(Int @a) {
+        @a.sum / @a.elems
+    }
+
+Calls that pass an Array[Int] will be successful:
+
+    my Int @b = 1,3,5;
+    say mean(@b);                       # @b is Array[Int]
+    say mean(Array[Int].new(1,3,5));    # Anonymous Array[Int]
+    say mean(my Int @ = 1,3,5);         # Another anonymous Array[Int]
+
+However, the following calls will all fail, due to passing an untyped array,
+even if the array just happens to contain Int values at the point it is
+passed:
+
+    my @c = 1,3,5;
+    say mean(@c);                       # Fails, passing untyped Array
+    say mean([1,3,5]);                  # Same
+    say mean(Array.new(1,3,5));         # Same again
+
 Note that in any given compiler, there may be fancy, under-the-hood, ways to
 bypass the type check on arrays, so when handling untrusted input, it can be
 good practice to perform additional type checks, where it matters:
@@ -335,7 +401,7 @@ does not put C<$> to explicitly show scalars, unlike List.perl:
     [(1,2),$(3,4)].perl.say; # says "[(1, 2), (3, 4)]"
                              # ...but actually means: "[$(1,2), $(3,4)]"
 
-It was decided all those extra dollar signs and parenthesis were more of an
+It was decided all those extra dollar signs and parentheses were more of an
 eye sore than a benefit to the user.  Basically, when you see a square bracket,
 remember the invisible dollar signs.
 
