--- a/perl6/doc/doc/Language/phasers.pod
+++ b/perl6/doc/doc/Language/phasers.pod
@@ -164,13 +164,13 @@ teardown usually want to happen in the opposite order from each other.
 
 =head2 BEGIN
 
-Runs at compile time, As Soon As Possible, only runs once.
+Runs at compile time, as soon as possible, only runs once.
 
 Can have a return value that is provided even in later phases.
 
 =head2 CHECK
 
-Runs at compile time, As Last As Possible, only runs once.
+Runs at compile time, As late as possible, only runs once.
 
 Can have a return value that is provided even in later phases.
 
@@ -180,7 +180,7 @@ travel back in time. You need a wormhole for that.
 
 =head2 LINK
 
-Runs at link time, As Last As Possible, only runs once.
+Runs at link time, As late as possible, only runs once.
 
 Can have a return value that is provided even in later phases.
 
@@ -189,7 +189,7 @@ they're too late for the application-wide linking decisions.
 
 =head2 INIT
 
-Runs after compilation during main execution, As Soon As Possible, only runs
+Runs after compilation during main execution, as soon as possible, only runs
 once.
 
 Can have a return value that is provided even in later phases.
@@ -207,7 +207,7 @@ An C<INIT> only runs once for all copies of a cloned closure.
 
 =head2 END
 
-Runs after compilation during main execution, As Last As Possible, only runs
+Runs after compilation during main execution, as late as possible, only runs
 once.
 
 When phasers are in different modules, the C<INIT> and C<END> phasers are
