--- a/perl6/doc/doc/Type/DateTime.pod
+++ b/perl6/doc/doc/Type/DateTime.pod
@@ -275,7 +275,8 @@ Usage:
 
     DATETIME.posix
 
-Returns the date and time as a POSIX/UNIX timestamp.
+Returns the date and time as a POSIX/UNIX timestamp (seconds since the Epoch,
+1st January 1970 UTC).
 
     say DateTime.new('2015-12-24T12:23:00Z').posix;     # 1450959780
 
