--- a/perl6/doc/doc/Type/IO/Socket.pod
+++ b/perl6/doc/doc/Type/IO/Socket.pod
@@ -13,10 +13,9 @@ through L<IO::Socket::INET>.
 
 =head2 method recv
 
-    method recv(IO::Socket:D: Cool $elems = Inf)
+    method recv(IO::Socket:D: Cool $elems = Inf, :$bin)
 
-Receive a package and return it, either as a L<Blob|/type/Blob> or a
-L<Str|/type/Str> (depending on whether the socket is binary). If C<$elems> is
+Receive a package and return it, either as a L<Blob|/type/Blob> if C<:bin> was passed, or a L<Str|/type/Str> if not. If C<$elems> is
 supplied, only that many bytes or characters are returned.
 
 Fails if the socket is not connected.
