--- a/perl6/doc/doc/Type/Metamodel/ClassHOW.pod
+++ b/perl6/doc/doc/Type/Metamodel/ClassHOW.pod
@@ -78,4 +78,16 @@ directly). The one in C<B> has arity 1 (i.e. it expects one argument, the
 invocant (C<self>)), and the one in C<A> expects 2 arguments (C<self> and
 C<$a>).
 
+=head2 method compose
+
+    method compose(Metamodel::ClassHOW:D: $obj)
+
+A call to C<compose> brings the meta object and thus the class it represents
+into a fully functional state, so if you construct or modify a class, you must
+call the compose method before working with the class.
+
+It updates the method cache, checks that all methods that are required by
+roles are implemented, does the actual role composition work, and sets up
+the class to work well with language interoperability.
+
 =end pod
