--- a/perl6/doc/doc/Type/Real.pod
+++ b/perl6/doc/doc/Type/Real.pod
@@ -76,4 +76,10 @@ The final digit produced is always rounded.
 
     say pi.base(10, 5);     # 3.14159
 
+To convert a string to a number use the C<:16($string)> notation where 16 is
+the base:
+
+    say :16("FF")           # 255
+    say :23("FF")           # 360
+
 =end pod
