--- a/perl6/doc/doc/Type/Regex.pod
+++ b/perl6/doc/doc/Type/Regex.pod
@@ -58,6 +58,7 @@ failure.
 
     multi method Bool(Regex:D:) returns Bool:D
 
-Matches against the caller's L<$_> variable, and returns the L<Match> object
+Matches against the caller's L<$_> variable, and returns True for a match or
+False for no match. 
 
 =end pod
