--- a/perl6/doc/doc/Type/Routine.pod
+++ b/perl6/doc/doc/Type/Routine.pod
@@ -18,6 +18,12 @@ are handled.
 
 =head1 Methods
 
+=head2 method name
+
+    method name(Routine:D:) returns Str:D
+
+Returns the name of the sub or method.
+
 =head2 method multi
 
     method multi(Routine:D:) returns Bool:D
