--- a/perl6/doc/doc/Type/Signature.pod
+++ b/perl6/doc/doc/Type/Signature.pod
@@ -58,7 +58,7 @@ sub add ($aB<,> $b) { $a + $b }
 
 As an exception the first parameter may be followed by a colon instead
 of a comma to mark the invocant of a method.  The invocant is the
-thing that was used to call the method, which is usually bound to L<C<self>>
+object that was used to call the method, which is usually bound to L<C<self>>.
 By specifying it in the signature, you can change the variable name it
 is bound to.
 
