--- a/perl6/doc/doc/Type/Slip.pod
+++ b/perl6/doc/doc/Type/Slip.pod
@@ -53,4 +53,11 @@ blocks.
 
 Creates a L<Slip|/type/Slip> from its arguments.
 
+=head1 Constants
+
+=head2 X<C<Empty>|Empty>
+
+C<Empty> is a C<Slip> of the empty C<List>.
+
 =end pod
+
