--- a/perl6/doc/doc/Type/Supply.pod
+++ b/perl6/doc/doc/Type/Supply.pod
@@ -103,21 +103,22 @@ down with error) when the supply is quit.
 
     method Promise(Supply:D:) returns Promise:D
 
-Returns a L<Promise|/type/Promise> object for the next value. That means the
-promise is kept when there is a next value, and broken when the supply is done
-or quit before a value arrived.
+Returns a L<Promise|/type/Promise> that will be kept when the C<Supply> is
+C<done>. If the C<Supply> also emits any values, then the C<Promise> will be
+kept with the final value. Otherwise, it will be kept with C<Nil>. If the
+C<Supply> ends with a C<quit> instead of a C<done>, then the C<Promise> will
+be broken with that exception.
 
-    my $s = Supply.new;
+    my $supplier = Supplier.new;
+    my $s = $supplier.Supply;
     my $p = $s.Promise;
     $p.then(-> $v { say "got $v.result()" });
-    $s.emit('cha');         # got cha
+    $supplier.emit('cha');         # not output yet
+    $supplier.done();              # got cha
 
-=head2 method close
-
-    method close(Supply:D: Tap:D $t)
-
-Closes the given tap, this is, calls its C<close> callback (if any), and
-prevents it from getting any more values flowing through the supply.
+The C<Promise> method is most useful when dealing with supplies that will tend
+to produce just one value, when only the final value is of interest, or when
+only completion (successful or not) is relevant.
 
 =head2 method live
 
@@ -127,7 +128,7 @@ Returns C<True> if the supply is "live", that is, values are emitted to taps
 as soon as they arrive. Always returns C<True> in the default C<Supply> (but
 for example on the supply returned from C<Supply.from-list> it's C<False>).
 
-    say Supply.new.live;    # True
+    say Supplier.new.Supply.live;    # True
 
 =head2 method schedule-on
 
@@ -147,18 +148,16 @@ the GUI thread.
 Waits until the supply is done (in which case it returns C<True>) or C<quit>
 (in which case it will throw the exception that was passed to C<quit>).
 
-    my $s = Supply.new;
-    $s.tap(&say);
-    my $p = Promise.allof((^10).pick(*).map: -> $v {
-        start {
-            $s.emit($v)
-        }
-    });
-    $p.then({ $s.done });
-
-    $s.wait;
-    say "Done";
-    await $p;
+   my $s = Supplier.new;
+   start {
+     sleep 1;
+     say "One second: running.";
+     sleep 1;
+     $s.emit(42);
+     $s.done;
+   }
+   $s.Supply.wait;
+   say "Two seconds: done";
 
 =head2 method list
 
@@ -188,7 +187,7 @@ values seen are emitted in reverse order.
 
 Waits until the given supply is done, then creates a supply to which all
 values seen are emitted in sorted order.  Optionally accepts a comparator
-C<Block|/type/Block>.
+L<Block|/type/Block>.
 
 =head1 Methods that return another Supply
 
@@ -247,10 +246,11 @@ the interval tock, and is incremented by one for each value emitted.
 Creates a new supply that only emits those values from the original supply
 that smart-match against C<$test>.
 
-    my $all  = Supply.new;
-    my $ints = $all.grep(Int);
+    my $supplier = Supplier.new;
+    my $all      = $supplier.Supply;
+    my $ints     = $all.grep(Int);
     $ints.tap(&say);
-    $all.emit($_) for 1, 'a string', 3.14159;   # prints only 1
+    $supplier.emit($_) for 1, 'a string', 3.14159;   # prints only 1
 
 =head2 method map
 
@@ -259,10 +259,11 @@ that smart-match against C<$test>.
 Returns a new supply that maps each value of the given supply through
 C<&mapper> and emits it to the new supply.
 
-    my $all    = Supply.new;
-    my $double = $all.map(-> $value { $value * 2 });
+    my $supplier = Supplier.new
+    my $all      = $supplier.Supply;
+    my $double   = $all.map(-> $value { $value * 2 });
     $double.tap(&say);
-    $all.emit(4);           # 8
+    $supplier.emit(4);           # 8
 
 =head2 method batch
 
