--- a/p6-pdf/perl6-PDF-Tools/Changes
+++ b/p6-pdf/perl6-PDF-Tools/Changes
@@ -1,6 +1,40 @@
+    Release 0.06
+    - [PDF::Storage::Serializer][PDF::DAO::{Array|Dict|Stream}] use Perl 6 object hashes
+      -- Refactored `my %h; ...; %hash{$object.WHICH}` with `my %h{Any}; ...; %hash{$object}` 
+         (See http://doc.perl6.org/type/Hash#Object_hashes_and_type_constraints)
+      
+    - [PDF::DAO::Doc]
+      -- added $doc.ast method. factored out from $doc.save-as
+      -- Added $doc.Str method; for in-memory serialization
+      -- $doc.save-as($target); # can now be file-name, io-path, or io-handle
+      -- added $.update( :annex(...) ) option.
+      This allows the update body to be saved to separate 'annex' file, as an
+      alternative to appending to the original PDF.
+      
+      Useful in a mail-merge scenario where multiple documents are being produced
+      from a common template and each can be reconstituted by appending the
+      annex file to the original template.
+
+      Possible further work:
+      -- JSON output of annex files
+      -- add `$doc.open( $file, :annex)` option - load a base pdf, then apply
+         an annex file.
+    - [PDF::Reader] Bug-fixes:
+      -- avoid encrypting the encryption dictionary
+      -- fixed de-Linearization. Now handled by PDF::Storage::Serializer
+
     Release 0.0.5
-    - added reader exception classes, e.g. X::PDF::BadXRef
+    - added some reader exception classes, e.g. X::PDF::BadXRef
     - renamed META.info => META6.json
+    - changed $.delegator.find-delegate method
+    - removed PDF::DAO::Type
+    - [PDF::DAO::Delegator]
+      -- simplified and more general coercement to roles
+      -- added X::PDF::Coerce warning
+    - [PDF::DAO::Tie]
+      -- removed support for method aliases
+    - [PDF::Storage::Filter::Predictors]
+      -- fixed multi-channel (color) PNG prediction
 
     Release 0.0.4
     - encrypted document creation is now supported. RC4 (Encryption revisions 1-4)
