git subrepo clone --force git://github.com/salortiz/p6-LMDB.git salortiz/p6-LMDB
subrepo:
  subdir:   "salortiz/p6-LMDB"
  merged:   "d5dd962"
upstream:
  origin:   "git://github.com/salortiz/p6-LMDB.git"
  branch:   "master"
  commit:   "d5dd962"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/salortiz/p6-LMDB/Changes
+++ b/salortiz/p6-LMDB/Changes
@@ -1,4 +1,12 @@
 Revision history for Perl6 module LMDB
 
+0.0.2
+  - Experimental support for nested transactions
+  - Add Env.close, Env.copy, Env.get-flags
+  - Implement high level DB class
+  - Add lots of constants via enum
+  - Add Cursor
+  - A proper TODO
+
 0.0.1 Wed Jan 20 2016
   - original release for github, mainly a sneak preview for administrative checks
