--- a/salortiz/p6-LMDB/TODO
+++ b/salortiz/p6-LMDB/TODO
@@ -1,3 +1,5 @@
 TODO
 
-At this stage even a proper TODO ;)
+Proper support for MBD_INTERGERKEY
+Support for low-level .put flags 
+Support for custom key comparators
