git subrepo clone --force git://github.com/p6-pdf/perl6-PDF-Tools.git p6-pdf/perl6-PDF-Tools
subrepo:
  subdir:   "p6-pdf/perl6-PDF-Tools"
  merged:   "9d22ef0"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-PDF-Tools.git"
  branch:   "master"
  commit:   "9d22ef0"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-PDF-Tools/Changes
+++ b/p6-pdf/perl6-PDF-Tools/Changes
@@ -1,4 +1,5 @@
     Release 0.06
+    - [bin/pdf-rewriter.pl] unbust rewriting/recompression of encrypted PDFs
     - [PDF::Storage::Serializer][PDF::DAO::{Array|Dict|Stream}] use Perl 6 object hashes
       -- Refactored `my %h; ...; %hash{$object.WHICH}` with `my %h{Any}; ...; %hash{$object}` 
          (See http://doc.perl6.org/type/Hash#Object_hashes_and_type_constraints)
