git subrepo clone --force https://github.com/kuerbis/Term-Choose-p6 kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "0ed3fbc"
upstream:
  origin:   "https://github.com/kuerbis/Term-Choose-p6"
  branch:   "master"
  commit:   "0ed3fbc"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,11 @@
 Revision history for Term::Choose
 
 
+0.105   2016-03-16
+        - setlocale to support no-ascii string
+        - Term::Choose::NCurses
+        - Update documentation.
+
 0.104   2016-03-01
         - Made the option 'll' private
         - Update documentation
