--- a/perl6/doc/doc/Type/Hash.pod
+++ b/perl6/doc/doc/Type/Hash.pod
@@ -142,7 +142,7 @@ In these moments you want an object hash!
   }
 
 This example uses an object hash that only accepts keys of type L<Instant> to
-implement a rudimentary, yet type-safe, logging mechanism. We utilize a named L<state>
+implement a rudimentary, yet type-safe, logging mechanism. We utilize a named L<state|/language/variables#The_state_Declarator>
 variable for keeping track of the previous C<Instant> so that we can provide an interval.
 
 The whole point of object hashes is to keep keys as objects-in-themselves.
