git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "5db8f1f"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "5db8f1f"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,8 +1,14 @@
 Revision history for Term::Choose
 
 
+0.107   2016-03-17
+        - Fixed source-url in META6.json
+
+0.106   2016-03-17
+        - Code refactoring
+
 0.105   2016-03-16
-        - setlocale to support no-ascii string
+        - setlocale to support non-ascii strings
         - Term::Choose::NCurses
         - Update documentation.
 
