git subrepo clone --force git://github.com/kuerbis/Term-TablePrint-p6.git kuerbis/Term-TablePrint-p6
subrepo:
  subdir:   "kuerbis/Term-TablePrint-p6"
  merged:   "6fb57f8"
upstream:
  origin:   "git://github.com/kuerbis/Term-TablePrint-p6.git"
  branch:   "master"
  commit:   "6fb57f8"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-TablePrint-p6/Changes
+++ b/kuerbis/Term-TablePrint-p6/Changes
@@ -1,6 +1,13 @@
 Revision history for Term::TablePrint
 
 
+0.009   2016-03-17
+        - Fixed source-url in META6.json
+
+0.008   2016-03-17
+        - Bugfix width undef string
+        - Code refactoring
+
 0.007   2016-03-16
         - setlocale to support non-ascii strings
         - Requires Term::Choose::NCurses
